# sub-metasiberia

./: .gitignore  ADMIN_UI_BACKLOG_METASIBERIA_2026-02-24.md  CMakeLists.txt  FONT_SELECTION_FEATURE.md  FONT_SELECTION_IMPLEMENTATION.md  LICENCE  README.md  commit_msg2.txt  functions.cmake
audio/: AudioEngine.cpp  AudioEngine.h
cmake/: fix_moc_qt5.cmake  shared_cxx_settings.cmake  shared_settings.cmake
docs/: AUDIO_PLAYER_MUSIC_SETTINGS_2026-04-18.md  CESIUM_INTEGRATION_PLAN_2026-03-27.md  CHAT_EMOJI_IMPLEMENTATION_2026-03-17.md  FIGMA_SITE_SYNC.md  FOG_WORLD_SETTINGS_INTEGRATION_2026-03-10.md  GESTURE_SETTINGS.md  IMAGE_RESOURCE_BASIS_FALLBACK_2026-03-23.md  IMAGE_RESOURCE_RECOVERY_2026-03-21.md  PORTAL_EDITOR_SETTINGS_2026-04-19.md  QT6_MIGRATION.md  QT_THEMES_MENU_2026-04-17.md  RELEASE_NOTES_0.0.1.md  RELEASE_NOTES_v0.0.13.md  RELEASE_NOTES_v0.0.14.md  RELEASE_NOTES_v0.0.15.md  RELEASE_NOTES_v0.0.16.md  RELEASE_NOTES_v0.0.17.md  RELEASE_NOTES_v0.0.18.md  RELEASE_NOTES_v0.0.19.md  RELEASE_NOTES_v0.0.20.md  RELEASE_PIPELINE.md  SECURITY.md  SERVERS_AND_EXCHANGE.md  UI_RUNTIME_TRANSLATION_2026-04-18.md  UI_TRANSLATION_HOTFIX_2026-04-18.md  VR_QT_INTEGRATION_PLAN_2026-03-20.md  WEBCLIENT_METASIBERIA.md  WEBMODE_BROWSER_BUTTON_2026-04-17.md  WORLD_LINKS_METASIBERIA.md  XR_AVATAR_VISIBILITY_NOTE_2026-03-29.md  XR_LOCAL_AVATAR_VISIBILITY_FIX_2026-03-27.md  XR_POSE_TRACE_ANALYSIS.md  building.txt
emscripten_build/: CMakeCache.txt
emscripten_build2/: CMakeCache.txt
emscripten_build3/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
gui_client/: AboutDialog.cpp  AddObjectDialog.cpp  AddObjectDialog.ui  AddObjectPreviewWidget.cpp  AddObjectPreviewWidget.h  AddVideoDialog.cpp  AvatarGraphics.cpp  AvatarGraphics.h  AvatarPreviewGLUIWidget.cpp  AvatarPreviewGLUIWidget.h  AvatarPreviewWidget.cpp  AvatarPreviewWidget.h  AvatarSettingsDialog.cpp  AvatarSettingsDialog.h  AvatarSettingsDialog.ui  AvatarSettingsWidget.cpp  AvatarSettingsWidget.h  AvatarSettingsWidget.ui  BrowserVidPlayer.cpp  CMakeLists.txt  ChatUI.cpp  ChatUI.h  ClientThread.cpp  ClientThread.h  EmbeddedBrowser.cpp  EmojiUtils.h  EnvironmentOptionsWidget.cpp  EnvironmentOptionsWidget.h  EnvironmentOptionsWidget.ui  FloatingChatMessageUtils.h  GUIClient.cpp  GUIClient.h  GearEditorUI.cpp  GearEditorUI.h  GearInventoryUI.cpp  GearInventoryUI.h  GestureManagerUI.cpp  GestureManagerUI.h  GestureUI.cpp  GestureUI.h  (+63 more)
icons/: substrata.rc
installer/: CMakeLists.txt  InstallerApp.cpp  InstallerApp.h
local_backups/: BUILD_LOG.md  BUILD_LOG_20260206_151334.md  BUILD_LOG_20260206_153532.md  current_changes_20260206_153506.patch  last_commit.patch  last_commit.txt
(+141 files in other folders)
